fix globals overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,13 @@
   }
 }
 
+body {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
 .gradient-background {
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background-size: 400% 2000%;
